config/ingress/ingress-no-auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-no-auth
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: '/health'
      #- path: /
        pathType: Prefix
        backend:
          service:
            name: client-test-service
            port: 
              number: 8081
      - path: '/user'
        pathType: Prefix
        backend:
          service:
            name: auth-server-test-service
            port:
              number: 5000
      - path: '/login'
        pathType: Prefix
        backend:
          service:
            name: auth-server-test-service
            port:
              number: 5000
  #ingressClassName: nginx
