config/ingress/ingress-with-auth.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/auth-url: http://auth-service-service.default.svc.cluster.local:5000/verify
    traefik.ingress.kubernetes.io/auth-response-headers: UserID, IsAdmin, UserRoles
spec:
  rules:
  - http:
      paths:
      #- path: '/health'
      - path: '/message'
        pathType: Prefix
        backend:
          service:
            name: client-test-service
            port: 
              number: 8081
      - path: '/logout'
        pathType: Prefix
        backend:
          service:
            name: auth-service-service
            port: 
              number: 5000
      - path: '/blacklist/cleanup'
        pathType: Prefix
        backend:
          service:
            name: auth-service-service
            port: 
              number: 5000
